<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dip"
        android:paddingRight="8dip" >

        <TextView
            android:id="@+id/time"
            style="@style/item_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/tool_item_logo"
            android:text="14:30" />

        <TextView
            android:id="@+id/eat_type"
            style="@style/item_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_day"
            android:text="@string/eat_pre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
             android:id="@+id/total"
            style="@style/eatimp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_number"
            android:textColor="@color/eat_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie"
            android:textColor="@color/eat_color"
            android:textSize="@dimen/text_size_13" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="80dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="right"
            android:text="@string/today_step"
            android:textColor="@color/eat_color"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/total_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:text="@string/default_number"
            android:textColor="@color/eat_color"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_unian"
            android:textColor="@color/eat_color"
            android:textSize="@dimen/text_size_13" />
    </LinearLayout>

</LinearLayout>