<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dip"
        android:text="@string/dian_indicate"
        android:textColor="@color/label_color"
        android:textSize="@dimen/text_size_15" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/header_title"
            style="@style/indicate_label_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/effect_title"
            android:text="@string/user_sumary" />
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_down"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dip"/>
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/header_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dip"
        android:paddingRight="12dip" >

        <RelativeLayout
            style="@style/indicate_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/name_label" />

            <TextView
                android:id="@+id/name"
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/main_divider_line" />

        <RelativeLayout
            style="@style/indicate_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/sex_label" />

            <TextView
                android:id="@+id/sex"
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/main_divider_line" />

        <RelativeLayout
            style="@style/indicate_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/age_label" />

            <TextView
                android:id="@+id/age"
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/main_divider_line" />

        <RelativeLayout
            style="@style/indicate_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/hospital_label" />

            <TextView
                android:id="@+id/hospital"
                style="@style/medicine_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/data_list"
        style="@style/indicate_label_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/effect_title"
        android:text="@string/check_indicate"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bingli"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            style="@style/indicate_label_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/effect_title"
            android:text="@string/bingli_see" />

        <TextView
            android:id="@+id/bingli_see"
            style="@style/bingli_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/bingli_see" />

        <TextView
            style="@style/indicate_label_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/effect_title"
            android:text="@string/bingli_check" />

        <TextView
            android:id="@+id/bingli_check"
            style="@style/bingli_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/bingli_check" />
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white"/>

</LinearLayout>