<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dip"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/page_title"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/page_title_height" >

            <TextView
                android:id="@+id/title"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="8dip"
                android:singleLine="true"
                android:text="@string/alarm_def_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="@dimen/page_title_height"
                android:layout_height="@dimen/page_title_height"
                android:text="@string/x"
                android:textColor="@color/white"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >           

            <TextView
                android:id="@+id/alert_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:minHeight="80dip"
                android:textColor="#4A4E5A"
                android:text="@string/alarm_content"
                android:textSize="@dimen/text_size_18" />
            
            <TextView 
                android:id="@+id/date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#4A4E5A"
                android:text="@string/alarm_default_time"
                android:textSize="@dimen/text_size_14"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>